fixed deprecated warnings